--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,10 @@
 *.tar.gz
 *.rar
 
+dataset
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 /OcrParser/target/
-dataset
+/Api/target/
+/Core/target/
