--- a/OcrParser/pom.xml
+++ b/OcrParser/pom.xml
@@ -85,6 +85,11 @@
             <groupId>org.mongodb</groupId>
             <artifactId>mongo-java-driver</artifactId>
             <version>3.12.7</version>
+        </dependency>        
+        <dependency>
+            <groupId>org.apache.opennlp</groupId>
+            <artifactId>opennlp-tools</artifactId>
+            <version>1.8.4</version>
         </dependency>
     </dependencies>
 </project>
